  - [ ] opt: filter status
- [ ] dashboard groups
  - [x] opt: table view
  - [x] opt: grid view
  - [ ] opt: detail view
  - [x] opt: entity show icon of the meme
  - [ ] check: block by account_chat.status
  - [ ] check: recommend view
- [ ] dashboard accounts
  - [ ] show added groups
  - [ ] opt: add account
- [ ] component table
  - [x] sort global data by column
  - [ ] search global data by column
  - [ ] opt: hint no rows
  - [ ] opt: sort arrow show when sorted
- [ ] bugs
  - [ ] table data remove duplicates


# 2025-01-21

## TODO 

- [x] opt: quality evaluation
  - [ ] based on chat_metadata new filed
  - [ ] schedual store in quality_score
- [x] opt: add ai_about in chat_metadata
  - [ ] based on chat_metadata name, about, pinned_message...
- [x] opt: doxx_twtter 
  - [ ] schedual and random select one to recommend

# 2025-01-22

- [ ] dashboard v2
  - [ ] group table: filter account 
  - [ ] group deatil: show quality score

# 2025-01-23, 2025-01-24

- [ ] tg login
  - [ ] backend db
- [x] add account 
  - [ ] get code UI 
  - [ ] redis.lpush(request)
  - [ ] redis.set(phone_code)
  - [ ] redis.get(phone_code_status), status: success, error, cancel.

- [ ] table: category, 
  - [x] fix quality_score
  - [x] add category multi-select
  - [x] fix entity


- [ ] detailed view: 
  - [x] add category
  - [x] add quality
  - [x] members
  - [x] ai_about
  - [x] remove monitor bot
  - [x] add account
  - [x] fix entity
  - [x] add pinned messages
  - [x] add latest messages

# 2025-01-25

- [ ] dashboard 
  - [x] show message use markdown
  - [x] show message add message reactions 和 message buttons
  - [x] show message del sender_id, message_id
  - [x] add category show table
  - [x] fix filter from global data
  - [ ] kol社群这块需要加个1. 各个判断标准和相应得分 2. 给项目方打广告的记录和次数 3. KOL的风格总结

# 2025-01-26

- [ ] dashboard 
  - [x] add account multi-select 
  - [x] add category ai icon
  - [x] mannual update category

