@@ -108,5 +108,6 @@
   - [x] add account multi-select 
   - [x] add category ai icon
   - [x] mannual update category
+  - [x] improve update category
 
 
